# flask-todo-list

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  README.tex  pyproject.toml  setup.cfg
tests/: conftest.py  test_app.py
todo_list/: __init__.py  app.py  config.py  models.py  views.py
todo_list/templates/: add-task-form.html  search-form.html  status-nav.html  tasks-list.html  todo.html
